--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,15 @@ before_install:
   - docker build -t dejoker95/react-test-app -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run -e CI=ture dejoker95/react-test-app npm run test
+  - docker run -e CI=true dejoker95/react-test-app npm run test
 
 after_success:
   - docker build -t dejoker95/docker-frontend ./frontend
+  - docker build -t dejoker95/docker-backend ./backend
+  - docker build -t dejoker95/docker-nginx ./nginx
+
+  - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
+
+  - docker push dejoker95/docker-frontend
+  - docker push dejoker95/docker-backend
+  - docker push dejoker95/docker-nginx
