--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     environment: 
       MYSQL_HOST: mysql
       MYSQL_USER: root
-      MYSQL_PASSWORD: dongjoo
+      MYSQL_ROOT_PASSWORD: dejoker95
       MYSQL_DATABASE: myapp
       MYSQL_PORT: 3306
 
@@ -32,16 +32,4 @@ services:
     ports:
       - "3000:80"
 
-  mysql:
-    build: ./mysql
-    restart: unless-stopped
-    container_name: app_mysql
-    ports: 
-      - "3306:3306"
-    volumes:
-      - ./mysql/mysql_data:/var/lib/mysql
-      - ./mysql/sqls/:/docker_entrypoint-initdb.d/
-    environment: 
-      MYSQL_ROOT_PASSWORD: dongjoo
-      MYSQL_DATABASE: myapp
       
